# TVM-Solidity-Compiler

./: API.md  Changelog.md  README.md
compiler/libsolidity/analysis/: GlobalContext.cpp  TypeChecker.cpp  ViewPureChecker.cpp
compiler/libsolidity/ast/: TypeProvider.cpp  TypeProvider.h  Types.cpp  Types.h
compiler/libsolidity/codegen/: DictOperations.cpp  DictOperations.hpp  PeepholeOptimizer.cpp  PeepholeOptimizer.hpp  SizeOptimizer.cpp  SizeOptimizer.hpp  StackOpcodeSquasher.cpp  StackOpcodeSquasher.hpp  StackOptimizer.cpp  StackOptimizer.hpp  TVM.cpp  TVM.hpp  TVMABI.cpp  TVMABI.hpp  TVMAnalyzer.cpp  TVMAnalyzer.hpp  TVMCommons.cpp  TVMCommons.hpp  TVMConstants.hpp  TVMContractCompiler.cpp  TVMContractCompiler.hpp  TVMExpressionCompiler.cpp  TVMExpressionCompiler.hpp  TVMFunctionCall.cpp  TVMFunctionCall.hpp  TVMFunctionCompiler.cpp  TVMFunctionCompiler.hpp  TVMInlineFunctionChecker.cpp  TVMInlineFunctionChecker.hpp  TVMPusher.cpp  TVMPusher.hpp  TVMSimulator.cpp  TVMSimulator.hpp  TVMStructCompiler.cpp  TVMStructCompiler.hpp  TVMTypeChecker.cpp  TVMTypeChecker.hpp  TvmAst.cpp  TvmAst.hpp  TvmAstVisitor.cpp  (+1 more)
compiler/solc/: main.cpp
lib/: stdlib.sol
sold/: Cargo.toml  build.rs
sold/src/: lib.rs  libsolc.rs  main.rs  printer.rs
sold/tests/: FunctionId.sol  ImportRemote.sol  tests.rs
